# petite-truetype-renderer

./: .gitignore  CMakeLists.txt  FontParser.cpp  FontParser.h  FontReader.cpp  FontReader.h  FrameBufferCanvas.cpp  FrameBufferCanvas.h  Glyph.cpp  Glyph.h  GlyphComponent.cpp  GlyphComponent.h  README.md  main.cpp  vcpkg.json
utils/: Bit.cpp  Bit.h  Debug.h  Geometry.h  Unicode.h
